--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -20,6 +20,7 @@ Mathematik, Datenanalyse oder auch im Bewusstsein der Menschen.
 \cite[Wikipedia, 2018]{wikialgo}
 
 \subsection{Was ist ein Pathfinding-Algorithmus}
+\label{chap:was-ist-ein-pathfinding-algorithmus}
 
 Die Pathfinding-Algorithmen sind eine Unterklasse der Algorithmen, sie
 spezialisieren sich auf die Suche des optimalsten Wegs von einem Punkt $A$
