--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -480,6 +480,14 @@ Der Startpunkt ist blau und der Zielpunkt grün. Diagonale Verbindungen sind nic
       $(1/1)\ \ $
       $(2/2)\ \ $
      \\ \bottomrule %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \end{tabular}
+  \end{center}
+\end{table}
+\begin{table}[H]
+  \begin{center}
+    \begin{tabular}{ c  p{9cm}   p{2cm}   p{1cm}}
+      \toprule
+      \cmidrule(r){1-1}\cmidrule(lr){2-2}\cmidrule(l){3-3}
       \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image17}}
       & 
       \vspace{0.01cm}
