Add ending slide to presentation.

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -1,16 +1,16 @@
 \documentclass[professionalfont,serif,german]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[german]{babel}
-%\usetheme{Pittsburgh}
-\usetheme{Boadilla}
+\usetheme{Pittsburgh}
+%\usetheme{Boadilla}
 
 \usepackage{newtxtext,newtxmath}
 
 \title[Pathfinder-Vergleicher]{Pathfinding-Algorithmen}
 \subtitle{Einführung und Vergleich mittels einer Webapplikation}
-\author[A. Stoop, S. Fürbringer]{Adrian Stoop, Severin Fürbringer}
-\institute[BMZ, EVT18a]{Berufsmaturitätsschule Zürich}
-\date{\today}
+\author[A. Stoop, S. Fürbringer]{Adrian Stoop und Severin Fürbringer}
+\institute[BMZ, EVT18a]{Berufsmaturitätsschule Zürich \\ \tiny{Technik, Architektur, Life Sciences}}
+\date{5. März 2019}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -25,12 +25,6 @@
   \tableofcontents
 \end{frame}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}
-  \section[Abc]{Hello}
-  Hello
-\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 
@@ -75,5 +69,15 @@
 %       GitHub-Repository)
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}
+  \section[Vielen Dank für eure Aufmerksamkeit!]{Schluss}
+  \framesubtitle{Vielen Dank für eure Aufmerksamkeit!}
+  \frametitle{Schluss}
+  \begin{itemize}
+    \item BMA-Produkt als Webapplikation:\\ \url{bma.fuerbringer.info}
+    \item Quelltext Webapplikation und Dokument:\\ \url{github.com/fuerbringer/bma}
+  \end{itemize}
+\end{frame}
 
 \end{document}
